--- a/trangketthuc.css
+++ b/trangketthuc.css
@@ -30,6 +30,11 @@ html {
   font-size: 32px;
 }
 
+:root {
+  --inner-border-radius: 20px;
+  --ibr: var(--inner-border-radius);
+}
+
 .trang-ket-qua {
   display: flex;
   flex-direction: column;
@@ -119,4 +124,27 @@ html {
 .button:hover {
   background-color: #ccffcc;
   box-shadow: 0px 0px 0px 0px #d4d4d4;
+}
+
+@media only screen and (max-width: 961px) {
+
+  * {
+    font-size: 24px;
+  }
+
+  .main-frame {
+    width: 90vmin;
+    padding: var(--ibr) var(--ibr) var(--ibr) var(--ibr);
+  }
+
+  .notif-frame {
+    width: 100%;
+    gap: 10px;
+    padding: 20px 20px 40px;
+    border-radius: calc(70px - var(--ibr));
+  }
+
+  .button {
+    height: 58px;
+  }
 }
